--- a/app/Components/newModel/newModel.module.css
+++ b/app/Components/newModel/newModel.module.css
@@ -1,21 +1,48 @@
 .NewModel {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin-block: 10px;
+    perspective: 1000px;
+    /* Adds depth to the 3D effect */
 }
 
 .NewModel h6 {
     font-weight: 800;
     font-size: 80px;
+    color: #c5baba;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+    margin-bottom: 20px;
 }
 
 .NewModel img {
     height: 100%;
     width: 100%;
+    /* Control size on large screens */
+    animation: rotate360 5s linear infinite;
+    /* 360-degree rotation */
+    transform-style: preserve-3d;
+    /* Preserves 3D rotation */
+    box-shadow: 8px 8px 20px rgba(188, 183, 183, 0.5);
+    /* Shadow for depth */
 }
 
-@media(max-width:700px) {
+@keyframes rotate360 {
+    from {
+        transform: rotateY(0deg);
+    }
+
+    to {
+        transform: rotateY(360deg);
+    }
+}
+
+@media(max-width: 700px) {
     .NewModel h6 {
         font-size: 30px;
+    }
+
+    .NewModel img {
+        max-width: 100%;
     }
 }
